--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,22 +12,24 @@
     "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
-    "jsonwebtoken": "^9.0.0",
+    "@types/better-sqlite3": "^7.6.12",
+    "better-sqlite3": "^11.9.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^8.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.0",
-    "@types/cors": "^2.8.13",
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
     "eslint": "^8.40.0",
-    "prettier": "^3.0.0"
+    "jest": "^29.5.0",
+    "prettier": "^3.0.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.0"
   }
-} 
+}
