--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/inquirer": "^9.0.7",
+    "@types/node": "^22.13.17",
+    "chalk": "^5.4.1",
+    "inquirer": "^12.5.0",
+    "ora": "^8.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
