--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,19 +6,23 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
-    "@types/better-sqlite3": "^7.6.12",
-    "better-sqlite3": "^11.9.1",
+    "@types/sqlite3": "^3.1.8",
+    "sqlite3": "^5.1.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -29,7 +33,6 @@
     "eslint": "^8.40.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.0"
+    "ts-jest": "^29.1.0"
   }
 }
