feat: Implement Point-and-Click Editor and update development plan\n\n- Add Point-and-Click Editor component with element selection\n- Create playground environment for development\n- Update development plan with new playground requirements\n- Add mock authentication and walkthrough context\n- Update package configurations and dependencies

--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -1,19 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "es2018",
     "module": "commonjs",
-    "lib": ["es2020"],
+    "lib": ["es2018", "esnext.asynciterable"],
+    "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
+    "types": ["node", "express", "sqlite3", "jest"],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "declaration": true,
-    "sourceMap": true
+    "moduleResolution": "node"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
-} 
+  "exclude": ["node_modules"]
+}
