--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,42 @@
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.pnp/
+.pnp.js
 
-# Build output
+# Testing
+coverage/
+
+# Production
 dist/
 build/
 
-# IDE and editor files
-.idea/
-.vscode/
-*.swp
-*.swo
+# Misc
 .DS_Store
-
-# Environment variables
-.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Testing
-coverage/
-
 # Logs
-logs/
-*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# IDE and editor files
+*.swp
+*.swo
+
+# Environment variables
+.env
 
 # Temporary files
 tmp/
