--- a/examples/admin-playground/tsconfig.json
+++ b/examples/admin-playground/tsconfig.json
@@ -13,9 +13,15 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "noEmit": false,
+    "jsx": "react-jsx",
+    "outDir": "./dist",
+    "baseUrl": ".",
+    "paths": {
+      "@walkthrough-sdk/core": ["../../packages/core/src"],
+      "@walkthrough-sdk/admin": ["../../packages/admin/src"]
+    }
   },
-  "include": ["packages/**/*", "examples/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
-} 
+}
