--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -1,13 +1,17 @@
 {
   "name": "@walkthrough-sdk/admin",
   "version": "1.0.0",
+  "description": "Admin interface for the Walkthrough SDK",
   "private": true,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "lint": "eslint src --ext .ts,.tsx"
+    "start": "webpack serve --config webpack.config.js --mode development",
+    "playground": "webpack serve --config webpack.playground.config.js --mode development --port 3001",
+    "lint": "eslint src/**/*.{ts,tsx}",
+    "format": "prettier --write src/**/*.{ts,tsx}"
   },
   "dependencies": {
     "@walkthrough-sdk/core": "file:../core",
@@ -20,30 +24,37 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@types/react": "18.3.20",
-    "@types/react-dom": "18.3.6",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.5",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.0",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "ansi-html-community": "0.0.8",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.1",
-    "css-loader": "7.1.2",
-    "eslint": "^8.56.0",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.25.0",
+    "eslint-plugin-react": "^7.31.10",
     "events": "3.3.0",
     "html-entities": "2.6.0",
-    "html-webpack-plugin": "5.6.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^27.5.1",
     "path-browserify": "1.0.1",
+    "prettier": "^2.7.1",
+    "process": "0.11.10",
     "stream-browserify": "3.0.0",
-    "style-loader": "4.0.0",
-    "ts-loader": "9.5.2",
-    "typescript": "5.8.2",
+    "style-loader": "^3.3.1",
+    "ts-jest": "^27.1.5",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4",
     "util": "0.12.5",
-    "webpack": "5.98.0",
-    "webpack-cli": "5.1.4",
-    "webpack-dev-server": "5.2.1"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
