--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,27 +13,49 @@
     "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
+    "@walkthrough-sdk/admin": "1.0.0",
+    "@walkthrough-sdk/core": "1.0.0",
     "express": "^4.18.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
+    "@types/dotenv": "6.1.1",
+    "@types/express": "4.17.21",
+    "@types/jest": "29.5.14",
     "@types/node": "^20.10.5",
-    "@types/sqlite3": "^3.1.8",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1",
+    "@types/sqlite3": "3.1.11",
     "@types/supertest": "^6.0.2",
-    "@types/uuid": "^9.0.7",
+    "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
+    "ansi-html-community": "0.0.8",
+    "buffer": "6.0.3",
+    "crypto-browserify": "3.12.1",
+    "css-loader": "7.1.2",
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
+    "events": "3.3.0",
+    "html-entities": "2.6.0",
+    "html-webpack-plugin": "5.6.3",
     "jest": "^29.7.0",
+    "path-browserify": "1.0.1",
     "prettier": "^3.1.1",
+    "stream-browserify": "3.0.0",
+    "style-loader": "4.0.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
+    "ts-loader": "9.5.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "5.8.2",
+    "util": "0.12.5",
+    "webpack": "5.98.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "5.2.1"
   }
 }
