--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -13,9 +13,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "noEmit": false,
+    "jsx": "react-jsx",
+    "outDir": "./dist",
+    "declaration": true
   },
-  "include": ["packages/**/*", "examples/**/*"],
-  "exclude": ["node_modules"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 } 
