--- a/packages/create-walkthrough-backend/package.json
+++ b/packages/create-walkthrough-backend/package.json
@@ -20,17 +20,38 @@
   "author": "Jam Creative Consulting",
   "license": "ISC",
   "dependencies": {
+    "@walkthrough-sdk/admin": "1.0.0",
     "@walkthrough-sdk/backend": "file:../backend",
-    "inquirer": "^9.2.12",
+    "@walkthrough-sdk/core": "1.0.0",
     "chalk": "^4.1.2",
-    "ora": "^5.4.1"
+    "inquirer": "^9.2.12",
+    "ora": "^5.4.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.7",
-    "@types/node": "^20.11.24",
-    "typescript": "^5.3.3",
-    "jest": "^29.7.0",
     "@types/jest": "^29.5.12",
-    "ts-jest": "^29.1.2"
+    "@types/node": "^20.11.24",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1",
+    "ansi-html-community": "0.0.8",
+    "buffer": "6.0.3",
+    "crypto-browserify": "3.12.1",
+    "css-loader": "7.1.2",
+    "events": "3.3.0",
+    "html-entities": "2.6.0",
+    "html-webpack-plugin": "5.6.3",
+    "jest": "^29.7.0",
+    "path-browserify": "1.0.1",
+    "stream-browserify": "3.0.0",
+    "style-loader": "4.0.0",
+    "ts-jest": "^29.1.2",
+    "ts-loader": "9.5.2",
+    "typescript": "5.8.2",
+    "util": "0.12.5",
+    "webpack": "5.98.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "5.2.1"
   }
 }
